# 6.S965Final

./: .gitignore  README.md
codec/: x.ipynb
codec/data/: k3.csv  k4.csv  k5.csv  k6.csv
codec/python/: codec.py  x.ipynb
hdl/: crc32.sv  crc32_4.sv  entropy_decoder.sv  ether_2.sv  ether_4.sv  huffman_ac_lut.sv  huffman_decoder.sv  idct_1d.sv  idct_2d.sv  idct_2d_dma.sv  idct_2d_dma_wrapper.sv  inverse_quantizer.sv  jpeg_decoder.sv  matrix_transpose_buffer.sv  negedge_detector.sv  pipeline.sv  scan_order_lut.sv  serializer.sv  seven_segment_controller.sv  top_level.sv  zigzag_decoder.sv
idct/hdl/: idct_2d.sv  idct_2d_dma.sv  ycrcb2rgb.sv
idct/scripts/: chen_et_al_dct_idct.py  extract_channel_values.py  idct_2d_dma_test.py  idct_test.py
idct/sim/: test_idct_1d.py  test_idct_2d.py  test_idct_2d_dma.py
pynq/: base.xdc  ether_rgmi.sv
rfsoc/: base.xdc
scripts/: rgb2ycrcb.py
sim/: crc_4_test.py  crc_test.py  ether_test.py  model.py  test_huffman_decoder.py  test_inverse_quantizer.py  test_jpeg_decoder.py  test_ycrcb2rgb.py  test_zigzag_decoder.py
sim/sim_build/: cocotb_iverilog_dump.v  crc32.fst  ether.fst  ether_4.fst  results.xml  sim.vvp
sw_ether/: ether.py
tinycodec/: x.ipynb
tinycodec/data/: ac_lut_a.mem  ac_lut_b.mem  ac_lut_c.mem  huffman.csv  tmp.csv
tinycodec/hdl/: entropy_decoder.sv  huffman_ac_lut.sv  huffman_dc_lut.sv  huffman_decoder.sv  inverse_quantizer.sv  pipeline.sv  scan_order_lut.sv  xilinx_single_port_ram_read_first.v  zigzag_decoder.sv
tinycodec/rust/: Cargo.toml
tinycodec/rust/src/: main.rs
xdc/: base.xdc
(+14 files in other folders)
