[package]
name = "tinycodec"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
kdam = { version = "0.6.1", features = ["template", "spinner", "rayon"] }
anyhow = "1.0.93"
bitstream-io = "2.6.0"
ndarray = { version = "0.16.1" }
video-rs = { version = "0.10.2", features = ["ndarray"] }
rayon = "1.10.0"

[profile.release]
opt-level = 3